java 25 LTS (#22)
* java 25 LTS

* cleanup, harden

* java 25

* remove asm based transform

* remove asm based trclean up pluginansform

* cache maven deps

* clean up runtime

* optimize runtime

* fix agent

* 1. SimulationTransformerClassFileAPI.java - Refactored to:
    - Create ClassMetadata directly from the provided bytecode
    - Create EntityGenerator directly from that metadata
    - Added collectEventMethods() to determine which methods are events
    - Removed ClassGraph dependency entirely
  2. sim-agent/pom.xml - Removed ClassGraph dependency
  3. pom.xml (parent) - Removed ClassGraph from dependencyManagement
  4. Deleted ClassGraphAdapter.java - No longer needed

* versioning, release and publishing

* fix ci

* fixi

* remove splayqueue, gen readmes

* clean up janus

* add concepts

* clean up DESMOJ