@@ -23,8 +23,9 @@ import com.hellblazer.primeMover.api.SimulationException;
 import com.hellblazer.primeMover.api.EntityReference;
 
 import java.util.concurrent.*;
-import java.util.logging.Level;
-import java.util.logging.Logger;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * The processor of events, the continuation of time. This is the central
@@ -33,22 +34,19 @@ import java.util.logging.Logger;
  * @author <a href="mailto:hal.hildebrand@gmail.com">Hal Hildebrand</a>
  */
 abstract public class Devi implements Controller, AutoCloseable {
-    private static final Logger logger = Logger.getLogger(Devi.class.getCanonicalName());
-    private final    ThreadPoolExecutor                  executor;
+    private static final Logger logger = LoggerFactory.getLogger(Devi.class);
+    private final    ExecutorService                     executor;
     private final    Semaphore                           serializer        = new Semaphore(1);
     private volatile EventImpl                           caller;
     private volatile EventImpl                           currentEvent;
     private volatile long                                currentTime       = 0;
     private          boolean                             debugEvents       = false;
     private          Logger                              eventLog;
-    private volatile ThreadStats                         finalStats;
     private volatile CompletableFuture<EvaluationResult> futureSailor;
     private          boolean                             trackEventSources = false;
+
     public Devi() {
-        executor = (ThreadPoolExecutor) Executors.newCachedThreadPool(
-        Thread.ofVirtual().uncaughtExceptionHandler((thread, t) -> {
-            logger.log(Level.SEVERE, "unhandled exception in: " + thread, t);
-        }).name("Event Execution: ", 0).factory());
+        executor = Executors.newVirtualThreadPerTaskExecutor();
     }
 
     /**
@@ -75,9 +73,6 @@ abstract public class Devi implements Controller, AutoCloseable {
 
     @Override
     public void close() throws Exception {
-        if (finalStats != null) {
-            finalStats = new ThreadStats(executor);
-        }
         executor.close();
     }
 
@@ -172,7 +167,7 @@ abstract public class Devi implements Controller, AutoCloseable {
 
         assert current != null : "no current event";
         assert sailorMoon != null : "No future to signal";
-        assert !sailorMoon.isDone() : "Future sailure is done";
+        assert !sailorMoon.isDone() : "Future sailor is already done";
 
         final var ct = currentTime;
         final var continuingEvent = current.clone(ct);
@@ -215,24 +210,25 @@ abstract public class Devi implements Controller, AutoCloseable {
         this.eventLog = eventLog;
     }
 
-    public ThreadStats threadStatistics() {
-        return finalStats != null ? finalStats : new ThreadStats(executor);
-    }
 
     protected EventImpl createEvent(long time, EntityReference entity, int event, Object... arguments) {
         Event sourceEvent = trackEventSources ? currentEvent : null;
 
         if (debugEvents) {
-            StackTraceElement[] stackTrace = new Throwable().getStackTrace();
-            final var cn = entity.getClass().getCanonicalName();
-            for (int i = 0; i < stackTrace.length; i++) {
-                if (stackTrace[i].getClassName().equals(cn)) {
-                    return new EventImpl(stackTrace[i + 1].toString(), time, sourceEvent, entity, event, arguments);
-                }
+            // Use getName() instead of getCanonicalName() for reliable matching
+            // getCanonicalName() can return null for anonymous/local classes
+            final var entityClassName = entity.getClass().getName();
+            var frame = StackWalker.getInstance()
+                                   .walk(stream -> stream.dropWhile(f -> !f.getClassName().equals(entityClassName))
+                                                         .skip(1)
+                                                         .findFirst()
+                                                         .map(StackWalker.StackFrame::toStackTraceElement)
+                                                         .orElse(null));
+            if (frame != null) {
+                return new EventImpl(frame.toString(), time, sourceEvent, entity, event, arguments);
             }
         }
         return new EventImpl(time, sourceEvent, entity, event, arguments);
-
     }
 
     /**
@@ -263,15 +259,20 @@ abstract public class Devi implements Controller, AutoCloseable {
      *
      * @param event
      */
-    abstract protected void post(EventImpl event);
+    /**
+     * Post the event to be evaluated. Made public to allow blocking primitives
+     * in other packages to schedule continuation events.
+     */
+    abstract public void post(EventImpl event);
 
     /**
-     * Swap the calling event for the current caller
+     * Swap the calling event for the current caller. Made public to allow
+     * blocking primitives in other packages to capture continuation state.
      *
-     * @param newCaller
+     * @param newCaller the new caller to set (typically null to capture current)
      * @return the current caller event
      */
-    protected EventImpl swapCaller(EventImpl newCaller) {
+    public EventImpl swapCaller(EventImpl newCaller) {
         var tmp = caller;
         caller = newCaller;
         return tmp;
@@ -287,11 +288,11 @@ abstract public class Devi implements Controller, AutoCloseable {
                 }
                 final var result = event.invoke();
                 if (futureSailor.isDone()) {
-                    logger.severe("Future sailor already done");
+                    logger.error("Future sailor already done");
                 }
                 futureSailor.complete(new EvaluationResult(result));
             } catch (SimulationEnd e) {
-                logger.info("Simulation has ended at: " + currentTime);
+                logger.info("Simulation has ended at: {}", currentTime);
                 futureSailor.completeExceptionally(e);
                 return;
             } catch (Throwable e) {
@@ -303,7 +304,7 @@ abstract public class Devi implements Controller, AutoCloseable {
     }
 
     private void evaluation(EventImpl next) throws SimulationException {
-        logger.finer("evaluating: %s".formatted(next));
+        logger.trace("evaluating: {}", next);
         final var sailorMoon = futureSailor = new CompletableFuture<>();
         currentEvent = next;
         currentTime = next.getTime();
@@ -335,7 +336,7 @@ abstract public class Devi implements Controller, AutoCloseable {
         assert result != null;
 
         if (result.t != null) {
-            logger.log(Level.SEVERE, "Cannot evaluate event: " + next, result.t);
+            logger.error("Cannot evaluate event: {}", next, result.t);
             if (result.t instanceof SimulationException se) {
                 throw se;
             }
@@ -353,14 +354,6 @@ abstract public class Devi implements Controller, AutoCloseable {
         } else if (cc != null) {
             final var ct = currentTime;
             post(cc.resume(ct, result.result, result.t));
-        }
-    }
-
-    public record ThreadStats(int activeCount, long completedTaskCount, int largestPoolSize, int poolSize,
-                              long taskCount) {
-        public ThreadStats(ThreadPoolExecutor executor) {
-            this(executor.getActiveCount(), executor.getCompletedTaskCount(), executor.getLargestPoolSize(),
-                 executor.getPoolSize(), executor.getTaskCount());
         }
     }
 
